feat: port Create Biotech to 1.21.1 NeoForge